# yew-mdx

./: Cargo.toml  README.md
examples/embedded/: Cargo.toml  index.html  index.md
examples/embedded/src/: main.rs
examples/embedded/static/: markdown.css
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
src/: lib.rs  test.md
