[package]
name = "yew-mdx"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
description = "Markdown renderer in Yew with support for embedded components"

[dependencies]
markdown = "1.0.0-alpha.7"
yew = { version = "0.20.0" }

[workspace]
members = ["examples/*"]
