[package]
name = "yew-mdx"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
description = "Markdown renderer in Yew with support for embedded components"
repository = "https://github.com/xfbs/yew-mdx"
documentation = "https://docs.rs/yew-mdx"

[dependencies]
markdown = "1.0.0-alpha.7"
yew = { version = "0.20.0" }

[workspace]
members = ["examples/*"]
